# cc-router-lite

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  prompt.md
.github/workflows/: release.yml
DOCS/: ARCHITECTURE.md  PLAN.md  REQUIREMENTS.md
src/: codex.rs  config.rs  error.rs  main.rs  settings.rs  state.rs  tui.rs
tests/: integration_test.rs
