[package]
name = "ccrl"
version = "0.6.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1"
dirs = "5"
thiserror = "2"
ureq = "2"
clap_complete = "4"
owo-colors = "4"
console = "0.16"
ratatui = "0.29"
crossterm = "0.28"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
